--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -155,4 +155,74 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .footer {
+        display: flex;
+        flex-direction: column;
+        max-width: 390px;
+        min-width: 390px;
+        // max-height: 557px;
+        margin: 0 auto 0;
+    }
+
+    .footer-logo {
+        // display: flex;
+        // flex-direction: row;
+        max-height: 50px;
+        margin-top: 52px;
+        margin-bottom: 48px;
+        margin-left: 26px;
+
+        &__image {
+            max-width: 208px;
+            min-height: 50px;
+            margin-bottom: 11px;
+        }
+
+        &__text {
+            min-width: 250px;
+        }
+    }
+
+    .footer-menu {
+        display: flex;
+        flex-direction: column;
+        max-width: 202px;
+        margin-top: 31px;
+        margin-bottom: 24px;
+        margin-left: 26px;
+
+        &__link {
+            font-size: 16px;
+        }
+    }
+
+    .footer-contacts {
+        margin-left: 26px;
+
+        &_top {
+            margin-top: 0;
+            margin-left: 0;
+        }
+
+        &_bottom {
+            margin-top: 22px;
+            margin-left: 0;
+
+            & .content-container__item {
+
+                &_red {
+                    font-size: 18px;
+                }
+            }
+        }
+
+        & .content-container__item {
+            max-width: 368px;
+
+            &_bold {
+                font-size: 30px;
+            }
+        }
+    }
+}
