--- a/scss/blocks/_service.scss
+++ b/scss/blocks/_service.scss
@@ -151,7 +151,7 @@
     .service_bg-red__img {
         position: absolute;
         top: 11px;
-        left: 129px;
+        left: 0;
         z-index: -1;
     }
 }
