--- a/scss/blocks/_photos.scss
+++ b/scss/blocks/_photos.scss
@@ -9,21 +9,39 @@
     margin: 128px auto 35px;
 
     &__item {
+        min-width: 700px;
         max-width: 700px;
+        min-height: 453px;
+
+        &_l-top {
+            background: url('../../images/block-5/photo-bg_1.png');
+        }
 
         &_r-top {
             justify-self: flex-end;
+            background: url('../../images/block-5/photo-bg_2.png');
         }
 
         &_l-bot {
             align-self: flex-end;
+            background: url('../../images/block-5/photo-bg_3.png');
         }
 
         &_r-bot {
             justify-self: flex-end;
             align-self: flex-end;
+            background: url('../../images/block-5/photo-bg_4.png');
         }
     }
+}
+
+.photo-text {
+    max-width: 410px;
+    margin: 47px auto;
+    font-size: 25px;
+    text-align: center;
+    line-height: 130%;
+    color: $text-color-white;
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1440px) {}
@@ -38,7 +56,22 @@
 
         &__item {
             max-width: 353px;
+            min-width: 353px;
+            min-height: 228px;
+
+            &_l-top,
+            &_r-top,
+            &_l-bot,
+            &_r-bot {
+                background-size: contain;
+            }
         }
+    }
+
+    .photo-text {
+        max-width: 300px;
+        margin: 15px auto;
+        font-size: 18px;
     }
 }
 
@@ -49,9 +82,24 @@
         max-width: 340px;
         gap: 14px;
         margin: 51px auto 0;
-    
+
         &__item {
             max-width: 340px;
+            min-width: 340px;
+            min-height: 219px;
+
+            &_l-top,
+            &_r-top,
+            &_l-bot,
+            &_r-bot {
+                background-size: contain;
+            }
         }
+    }
+
+    .photo-text {
+        max-width: 300px;
+        margin: 15px auto;
+        font-size: 18px;
     }
 }
