--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -78,23 +78,23 @@
         max-height: 315px;
         margin: 0 auto;
         // font-family: $main-font;
-    
+
         &_left {
             min-width: 750px;
             // display: flex;
             // flex-direction: column;
         }
-    
+
         &_right {
             max-width: 750px;
             max-height: 323px;
             margin: 41px auto 0;
         }
     }
-    
+
     .contacts-inner {
         display: flex;
-    
+
         &_left,
         &_right {
             display: inherit;
@@ -105,39 +105,19 @@
             // margin-bottom: 41px;
             padding: 26px;
         }
-    
+
         &_left {
             min-width: 397px;
             max-width: 397px;
             margin-left: 48px;
         }
-    
+
         &_right {
             max-width: 244px;
             min-width: 244px;
             margin-left: 14px;
         }
     }
-    
-    // .contacts-inner_left {
-    //     & .content-container__item_bold {
-    //         font-size: 20px;
-    //     }
-    
-    //     & .content-container__item {
-    //         margin-top: 10px;
-    //     }
-    // }
-    
-    // .contacts-inner_right {
-    //     & .content-container__item_bold {
-    //         font-size: 20px;
-    //     }
-    
-    //     & .content-container__item {
-    //         margin-top: 10px;
-    //     }
-    // }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -148,21 +128,19 @@
         max-height: 1098px;
         // margin: 0 auto;
         // font-family: $main-font;
-    
+
         &_left {
             min-width: 390px;
-            // display: flex;
-            // flex-direction: column;
             margin: 0 auto;
         }
-    
+
         &_right {
             max-width: 390px;
             min-height: 233px;
             margin: 0 auto;
         }
     }
-    
+
     .contacts-inner {
         display: flex;
         flex-direction: column;
@@ -170,28 +148,28 @@
         max-width: 340px;
         margin-left: auto;
         margin-right: auto;
-        border: 1px solid blue;
-    
+
         &_left,
         &_right {
-            display: inherit;
-            flex-direction: column;
+            display: grid;
+            grid-template-columns: 1fr 5fr;
+            grid-template-rows: 1fr 1fr;
             align-items: flex-start;
             min-width: 340px;
             // max-height: 155px;
             margin: 0 auto;
             // margin-bottom: 41px;
-            padding: 16px 17px 20px 8px;
+            padding: 16px 20px 20px 8px;
         }
-    
+
         &_left {
             // min-width: 397px;
             // max-width: 397px;
             // margin-left: 48px;
-            max-height: 97px;
+            max-height: 100px;
             gap: 0;
         }
-    
+
         &_right {
             // max-width: 244px;
             // min-width: 244px;
@@ -200,22 +178,48 @@
             gap: 0;
         }
     }
-    
+
     .contacts-inner_left {
+        & .content-container__icon {
+            grid-column: 1/2;
+            grid-row: 1/3;
+        }
+
         & .content-container__item_bold {
+            margin-left: 20px;
             font-size: 18px;
         }
-    
+
+        & .content-container__item_tiny {
+            grid-column: 2/3;
+            grid-row: 2/3;
+            margin-bottom: 0;
+            margin-left: 20px;
+        }
+
         & .content-container__item {
-            margin-top:5px;
+            margin-top: 5px;
         }
     }
-    
+
     .contacts-inner_right {
+        & .content-container__icon {
+            grid-column: 1/2;
+            grid-row: 1/3;
+        }
+
         & .content-container__item_bold {
+            margin-left: 20px;
             font-size: 18px;
         }
-    
+
+        & .content-container__item_tiny {
+            grid-column: 2/3;
+            grid-row: 2/3;
+            margin-bottom: 0;
+            margin-left: 20px;
+        }
+
         & .content-container__item {
             margin-top: 5px;
         }
