--- a/scss/style.css
+++ b/scss/style.css
@@ -834,32 +834,54 @@ body {
     max-width: 340px;
     margin-left: auto;
     margin-right: auto;
-    border: 1px solid blue;
   }
   .contacts-inner_left, .contacts-inner_right {
-    display: inherit;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 1fr;
     align-items: flex-start;
     min-width: 340px;
     margin: 0 auto;
-    padding: 16px 17px 20px 8px;
+    padding: 16px 20px 20px 8px;
   }
   .contacts-inner_left {
-    max-height: 97px;
+    max-height: 100px;
     gap: 0;
   }
   .contacts-inner_right {
     max-height: 80px;
     gap: 0;
   }
+  .contacts-inner_left .content-container__icon {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
   .contacts-inner_left .content-container__item_bold {
+    margin-left: 20px;
     font-size: 18px;
+  }
+  .contacts-inner_left .content-container__item_tiny {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    margin-left: 20px;
   }
   .contacts-inner_left .content-container__item {
     margin-top: 5px;
   }
+  .contacts-inner_right .content-container__icon {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
   .contacts-inner_right .content-container__item_bold {
+    margin-left: 20px;
     font-size: 18px;
+  }
+  .contacts-inner_right .content-container__item_tiny {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    margin-left: 20px;
   }
   .contacts-inner_right .content-container__item {
     margin-top: 5px;
