fix service bg-red layout 420px

--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -137,7 +137,7 @@
         &_right {
             max-width: 390px;
             min-height: 233px;
-            margin: 0 auto;
+            margin: 18px auto 0;
         }
     }
 
@@ -168,6 +168,7 @@
             // margin-left: 48px;
             max-height: 100px;
             gap: 0;
+            margin-top: 34px;
         }
 
         &_right {
