--- a/scss/blocks/_photos.scss
+++ b/scss/blocks/_photos.scss
@@ -52,7 +52,6 @@
     .photos {
         max-width: 720px;
         min-height: 471px;
-        margin: 128px auto 35px;
 
         &__item {
             max-width: 353px;
@@ -101,5 +100,35 @@
         max-width: 300px;
         margin: 15px auto;
         font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .photos {
+        display: flex;
+        flex-direction: column;
+        max-width: 300px;
+        min-height: 0;
+        gap: 14px;
+        margin: 51px auto 0;
+
+        &__item {
+            max-width: 300px;
+            min-width: 300px;
+            min-height: 190px;
+
+            &_l-top,
+            &_r-top,
+            &_l-bot,
+            &_r-bot {
+                background-size: contain;
+            }
+        }
+    }
+
+    .photo-text {
+        max-width: 290px;
+        margin: 15px auto;
+        font-size: 16px;
     }
 }
