--- a/scss/blocks/_service.scss
+++ b/scss/blocks/_service.scss
@@ -61,18 +61,14 @@
     .service {
         position: relative;
         max-width: 750px;
-        margin: 0 auto;
 
         &_bg-grey {
-            // max-height: 1091px;
             min-height: 1091px;
             margin-top: 47px;
             padding-top: 647px;
 
             &__image {
                 max-height: 401px;
-                // margin: auto;
-                // margin-top: 200px;
                 margin-right: 153px;
                 margin-bottom: 43px;
                 margin-left: 50px;
@@ -82,8 +78,6 @@
         &_bg-red {
             position: relative;
             display: flex;
-            flex-wrap: wrap;
-            // grid-template-columns: 1fr 1fr;
             max-height: 835px;
             min-height: 835px;
             z-index: 0;
@@ -112,7 +106,6 @@
     .service {
         position: relative;
         max-width: 390px;
-        margin: 0 auto;
 
         &_bg-grey {
             min-height: 1116px;
@@ -131,8 +124,6 @@
             position: relative;
             display: flex;
             flex-wrap: wrap;
-            // grid-template-columns: 1fr 1fr;
-            // max-height: 980px;
             max-height: fit-content;
             z-index: 0;  
         }
@@ -145,6 +136,51 @@
             max-height: 814px;
             min-height: 814px;
             max-width: 390px;
+        }
+    }
+
+    .service_bg-red__img {
+        position: absolute;
+        top: 11px;
+        left: 0;
+        z-index: -1;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .service {
+        position: relative;
+        max-width: 310px;
+
+        &_bg-grey {
+            min-height: 1116px;
+            margin-top: 30px;
+            padding-top: 814px;
+
+            &__image {
+                max-width: 300px;
+                margin-right:auto ;
+                margin-bottom: 26px;
+                margin-left: auto;
+            }
+        }
+
+        &_bg-red {
+            position: relative;
+            display: flex;
+            flex-wrap: wrap;
+            max-height: fit-content;
+            z-index: 0;  
+        }
+
+        &_bg-white {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            max-height: 814px;
+            min-height: 814px;
+            max-width: 310px;
         }
     }
 
