--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -25,7 +25,6 @@
         display: inherit;
         flex-direction: column;
         align-items: flex-start;
-        // justify-content: space-between;
         max-height: 155px;
         margin-top: 65px;
         padding: 26px;
@@ -76,13 +75,9 @@
         flex-wrap: wrap;
         max-width: 750px;
         max-height: 315px;
-        margin: 0 auto;
-        // font-family: $main-font;
 
         &_left {
             min-width: 750px;
-            // display: flex;
-            // flex-direction: column;
         }
 
         &_right {
@@ -102,7 +97,6 @@
             align-items: flex-start;
             max-height: 155px;
             margin-top: 35px;
-            // margin-bottom: 41px;
             padding: 26px;
         }
 
@@ -126,8 +120,6 @@
         flex-wrap: wrap;
         max-width: 390px;
         max-height: 1098px;
-        // margin: 0 auto;
-        // font-family: $main-font;
 
         &_left {
             min-width: 390px;
@@ -156,25 +148,17 @@
             grid-template-rows: 1fr 1fr;
             align-items: flex-start;
             min-width: 340px;
-            // max-height: 155px;
             margin: 0 auto;
-            // margin-bottom: 41px;
             padding: 16px 20px 20px 8px;
         }
 
         &_left {
-            // min-width: 397px;
-            // max-width: 397px;
-            // margin-left: 48px;
             max-height: 100px;
             gap: 0;
             margin-top: 34px;
         }
 
         &_right {
-            // max-width: 244px;
-            // min-width: 244px;
-            // margin-left: 14px;
             max-height: 80px;
             gap: 0;
         }
@@ -219,6 +203,105 @@
             grid-row: 2/3;
             margin-bottom: 0;
             margin-left: 20px;
+        }
+
+        & .content-container__item {
+            margin-top: 5px;
+        }
+    }
+}
+
+@media screen and (max-width: 320px){
+    .contacts {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 300px;
+        max-height: 1098px;
+
+        &_left {
+            min-width: 300px;
+            margin: 0 auto;
+        }
+
+        &_right {
+            max-width: 300px;
+            min-height: 233px;
+            margin: 18px auto 0;
+        }
+    }
+
+    .contacts-inner {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        max-width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+
+        &_left,
+        &_right {
+            display: grid;
+            grid-template-columns: 1fr 5fr;
+            grid-template-rows: 1fr 1fr;
+            align-items: flex-start;
+            min-width: 300px;
+            margin: 0 auto;
+            padding: 16px 20px 20px 8px;
+        }
+
+        &_left {
+            max-height: 100px;
+            gap: 0;
+            margin-top: 20px;
+        }
+
+        &_right {
+            max-height: 80px;
+            gap: 0;
+        }
+    }
+
+    .contacts-inner_left {
+        & .content-container__icon {
+            grid-column: 1/2;
+            grid-row: 1/3;
+        }
+
+        & .content-container__item_bold {
+            margin-left: 20px;
+            font-size: 16px;
+        }
+
+        & .content-container__item_tiny {
+            grid-column: 2/3;
+            grid-row: 2/3;
+            margin-bottom: 0;
+            margin-left: 20px;
+            font-size: 12px;
+        }
+
+        & .content-container__item {
+            margin-top: 5px;
+        }
+    }
+
+    .contacts-inner_right {
+        & .content-container__icon {
+            grid-column: 1/2;
+            grid-row: 1/3;
+        }
+
+        & .content-container__item_bold {
+            margin-left: 20px;
+            font-size: 16px;
+        }
+
+        & .content-container__item_tiny {
+            grid-column: 2/3;
+            grid-row: 2/3;
+            margin-bottom: 0;
+            margin-left: 20px;
+            font-size: 12px;
         }
 
         & .content-container__item {
