--- a/scss/blocks/_convinience.scss
+++ b/scss/blocks/_convinience.scss
@@ -66,7 +66,6 @@
 @media screen and (min-width: 481px) and (max-width: 768px) {
     .convinience {
         max-width: 750px;
-        margin: 0 auto;
     }
 
     .card-wrapper {
@@ -100,7 +99,7 @@
 
         &__slogan {
             max-width: 160px;
-            font-size: 19px;
+            font-size: 16px;
             text-align: center;
         }
     }
@@ -109,7 +108,6 @@
 @media screen and (min-width: 320px) and (max-width: 480px) {
     .convinience {
         max-width: 390px;
-        margin: 0 auto;
     }
 
     .card-wrapper {
@@ -154,6 +152,58 @@
             align-self: center;
             font-size: 16px;
             text-align: start;
+        }
+    }
+}
+
+@media screen and (max-width: 320px){
+    .convinience {
+        max-width: 300px;
+    }
+
+    .card-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 18px;
+        max-width: 300px;
+        margin: 30px auto 24px;
+    }
+
+    .card-item {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: 1fr 1fr;
+        max-width: 300px;
+        min-width: 300px;
+        max-height: 126px;
+        min-height: 126px;
+        padding: 9px 8px 22px 8px;
+
+        &__button {
+            grid-column: 1/3;
+            align-self: flex-start;
+            max-width: 115px;
+            min-width: 115px;
+            max-height: 30px;
+            min-height: 30px;
+            font-size: 15px;
+        }
+
+        &__image {
+            grid-column: 1/2;
+            grid-row: 2/3;
+            max-height: 46px;
+            margin-top: 18px;
+            justify-self: center;
+        }
+
+        &__slogan {
+            margin-top: 20px;
+            grid-column: 2/3;
+            grid-row: 2/3;
+            align-self: center;
+            font-size: 16px;
+            text-align: center;
         }
     }
 }
