--- a/scss/style.css
+++ b/scss/style.css
@@ -379,7 +379,6 @@ body {
   .photos {
     max-width: 720px;
     min-height: 471px;
-    margin: 128px auto 35px;
   }
   .photos__item {
     max-width: 353px;
@@ -415,6 +414,29 @@ body {
     max-width: 300px;
     margin: 15px auto;
     font-size: 18px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .photos {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    min-height: 0;
+    gap: 14px;
+    margin: 51px auto 0;
+  }
+  .photos__item {
+    max-width: 300px;
+    min-width: 300px;
+    min-height: 190px;
+  }
+  .photos__item_l-top, .photos__item_r-top, .photos__item_l-bot, .photos__item_r-bot {
+    background-size: contain;
+  }
+  .photo-text {
+    max-width: 290px;
+    margin: 15px auto;
+    font-size: 16px;
   }
 }
 .convinience {
@@ -476,7 +498,6 @@ body {
 @media screen and (min-width: 481px) and (max-width: 768px) {
   .convinience {
     max-width: 750px;
-    margin: 0 auto;
   }
   .card-wrapper {
     display: flex;
@@ -506,14 +527,13 @@ body {
   }
   .card-item__slogan {
     max-width: 160px;
-    font-size: 19px;
+    font-size: 16px;
     text-align: center;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .convinience {
     max-width: 390px;
-    margin: 0 auto;
   }
   .card-wrapper {
     display: flex;
@@ -554,6 +574,52 @@ body {
     align-self: center;
     font-size: 16px;
     text-align: start;
+  }
+}
+@media screen and (max-width: 320px) {
+  .convinience {
+    max-width: 300px;
+  }
+  .card-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 18px;
+    max-width: 300px;
+    margin: 30px auto 24px;
+  }
+  .card-item {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+    max-width: 300px;
+    min-width: 300px;
+    max-height: 126px;
+    min-height: 126px;
+    padding: 9px 8px 22px 8px;
+  }
+  .card-item__button {
+    grid-column: 1/3;
+    align-self: flex-start;
+    max-width: 115px;
+    min-width: 115px;
+    max-height: 30px;
+    min-height: 30px;
+    font-size: 15px;
+  }
+  .card-item__image {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    max-height: 46px;
+    margin-top: 18px;
+    justify-self: center;
+  }
+  .card-item__slogan {
+    margin-top: 20px;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    align-self: center;
+    font-size: 16px;
+    text-align: center;
   }
 }
 .service {
@@ -611,7 +677,6 @@ body {
   .service {
     position: relative;
     max-width: 750px;
-    margin: 0 auto;
   }
   .service_bg-grey {
     min-height: 1091px;
@@ -627,7 +692,6 @@ body {
   .service_bg-red {
     position: relative;
     display: flex;
-    flex-wrap: wrap;
     max-height: 835px;
     min-height: 835px;
     z-index: 0;
@@ -652,7 +716,6 @@ body {
   .service {
     position: relative;
     max-width: 390px;
-    margin: 0 auto;
   }
   .service_bg-grey {
     min-height: 1116px;
@@ -681,6 +744,46 @@ body {
     max-height: 814px;
     min-height: 814px;
     max-width: 390px;
+  }
+  .service_bg-red__img {
+    position: absolute;
+    top: 11px;
+    left: 0;
+    z-index: -1;
+  }
+}
+@media screen and (max-width: 320px) {
+  .service {
+    position: relative;
+    max-width: 310px;
+  }
+  .service_bg-grey {
+    min-height: 1116px;
+    margin-top: 30px;
+    padding-top: 814px;
+  }
+  .service_bg-grey__image {
+    max-width: 300px;
+    margin-right: auto;
+    margin-bottom: 26px;
+    margin-left: auto;
+  }
+  .service_bg-red {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    max-height: -moz-fit-content;
+    max-height: fit-content;
+    z-index: 0;
+  }
+  .service_bg-white {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    max-height: 814px;
+    min-height: 814px;
+    max-width: 310px;
   }
   .service_bg-red__img {
     position: absolute;
@@ -784,7 +887,6 @@ body {
     flex-wrap: wrap;
     max-width: 750px;
     max-height: 315px;
-    margin: 0 auto;
   }
   .contacts_left {
     min-width: 750px;
@@ -888,6 +990,85 @@ body {
     grid-row: 2/3;
     margin-bottom: 0;
     margin-left: 20px;
+  }
+  .contacts-inner_right .content-container__item {
+    margin-top: 5px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .contacts {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 300px;
+    max-height: 1098px;
+  }
+  .contacts_left {
+    min-width: 300px;
+    margin: 0 auto;
+  }
+  .contacts_right {
+    max-width: 300px;
+    min-height: 233px;
+    margin: 18px auto 0;
+  }
+  .contacts-inner {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .contacts-inner_left, .contacts-inner_right {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: flex-start;
+    min-width: 300px;
+    margin: 0 auto;
+    padding: 16px 20px 20px 8px;
+  }
+  .contacts-inner_left {
+    max-height: 100px;
+    gap: 0;
+    margin-top: 20px;
+  }
+  .contacts-inner_right {
+    max-height: 80px;
+    gap: 0;
+  }
+  .contacts-inner_left .content-container__icon {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  .contacts-inner_left .content-container__item_bold {
+    margin-left: 20px;
+    font-size: 16px;
+  }
+  .contacts-inner_left .content-container__item_tiny {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    margin-left: 20px;
+    font-size: 12px;
+  }
+  .contacts-inner_left .content-container__item {
+    margin-top: 5px;
+  }
+  .contacts-inner_right .content-container__icon {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  .contacts-inner_right .content-container__item_bold {
+    margin-left: 20px;
+    font-size: 16px;
+  }
+  .contacts-inner_right .content-container__item_tiny {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    margin-left: 20px;
+    font-size: 12px;
   }
   .contacts-inner_right .content-container__item {
     margin-top: 5px;
@@ -1017,7 +1198,7 @@ body {
     flex-direction: column;
     max-width: 390px;
     min-width: 390px;
-    margin: 0 auto 0;
+    margin: 0 auto;
   }
   .footer-logo {
     max-height: 50px;
@@ -1065,6 +1246,61 @@ body {
     font-size: 30px;
   }
 }
+@media screen and (max-width: 320px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    max-width: 390px;
+    min-width: 390px;
+    margin: 0 auto;
+  }
+  .footer-logo {
+    max-height: 50px;
+    margin-top: 52px;
+    margin-bottom: 48px;
+    margin-left: 26px;
+  }
+  .footer-logo__image {
+    max-width: 208px;
+    min-height: 50px;
+    margin-bottom: 11px;
+  }
+  .footer-logo__text {
+    min-width: 250px;
+  }
+  .footer-menu {
+    display: flex;
+    flex-direction: column;
+    max-width: 202px;
+    margin-top: 31px;
+    margin-bottom: 24px;
+    margin-left: 26px;
+  }
+  .footer-menu__link {
+    font-size: 16px;
+  }
+  .footer-contacts {
+    margin-left: 26px;
+  }
+  .footer-contacts_top {
+    margin-top: 0;
+    margin-left: 0;
+  }
+  .footer-contacts_bottom {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 0;
+  }
+  .footer-contacts_bottom .content-container__item_red {
+    font-size: 18px;
+  }
+  .footer-contacts .content-container__item {
+    max-width: 280px;
+  }
+  .footer-contacts .content-container__item_bold {
+    font-size: 25px;
+  }
+}
 .title-container_contacts {
   margin-top: 21px;
   margin-left: 245px;
@@ -1083,7 +1319,6 @@ body {
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
   .title-container_contacts {
-    margin-top: 21px;
     margin-left: 0;
   }
   .title-container__icon, .title-container__title {
@@ -1101,7 +1336,6 @@ body {
     line-height: 29px;
   }
   .title-container_contacts {
-    margin-top: 21px;
     margin-left: 0;
   }
   .title-container__icon, .title-container__title {
@@ -1119,6 +1353,32 @@ body {
   }
   .convinience .title-container__icon {
     margin-bottom: 50px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .title-container {
+    max-width: 310px;
+    line-height: 25px;
+  }
+  .title-container_contacts {
+    margin-left: 0;
+  }
+  .title-container__icon, .title-container__title {
+    display: inline-block;
+  }
+  .title-container__icon {
+    margin-top: 0;
+    margin-left: -20px;
+    max-width: 88px;
+  }
+  .title-container__title {
+    max-width: 210px;
+    margin-top: 50px;
+    margin-left: 15px;
+    font-size: 25px;
+  }
+  .convinience .title-container__icon {
+    margin-bottom: 45px;
   }
 }
 .content-container {
@@ -1196,7 +1456,6 @@ body {
   .content-container {
     max-width: 530px;
     margin: 31px 32px 40px 37px;
-    line-height: 24px;
   }
   .content-container__item {
     margin-bottom: 10px;
@@ -1214,7 +1473,6 @@ body {
     max-width: 502px;
     margin-top: 47px;
     margin-left: 162px;
-    line-height: 27px;
   }
   .content-container_left__item {
     position: relative;
