--- a/scss/blocks/_service.scss
+++ b/scss/blocks/_service.scss
@@ -78,6 +78,7 @@
         &_bg-red {
             position: relative;
             display: flex;
+            flex-direction: column;
             max-height: 835px;
             min-height: 835px;
             z-index: 0;
